add smile on map

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Feedback form"
-    />
+    <meta name="description" content="Feedback form" />
+    <link rel="shortcut icon" href="img/favicon_logo.ico" type="image/ico" />
     <title>Feedback form App</title>
   </head>
   <body>
